2003-02-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkEntry.c (SpinboxWidgetObjCmd, EntryWidgetObjCmd):
	* tests/entry.test:   return 1 if selection is present even if
	* tests/spinbox.test: entry/spinbox is disabled, as selection get
	will still return the selection (although selection still ignore
	modify requests when entry/spinbox is disabled). [Bug #637828]

2003-02-24  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	* tkMacOSXDialog.c (NavServicesGetFile): Fix bug with
	kNavCtlSetSelection - control data should be a pointer
	not a handle.
	
2003-02-21  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/clrpick.tcl (color::BuildDialog): 
	* library/msgbox.tcl (MessageBox): Yet more places that did
	complex and fragile width calculations instead of using grid,
	though with these it is the -uniform option that saves the day.

	* library/tkfbox.tcl (file::Create): This procedure was really
	very crufty in how it went about creating the GUI.  It is far
	easier and more robust to use the grid geometry manager than it is
	to tune the results of pack with tweaks to -width.  [Bug #673722]

	* library/comdlg.tcl (FDGetFileTypes): Set an upper limit on how
	long a file type item description string can get due to appending
	of types. [Bug #617392]

	* tests/panedwindow.test (panedwindow-30.1): 
	* generic/tkPanedWindow.c (DisplayPanedWindow, DisplayProxyWindow): 
	Use the window's depth, not the screen's default depth. [Bug #671122]

2003-02-20  Daniel Steffen  <das@users.sourceforge.net>

	* library/console.tcl: (aqua & macintosh) added missing <Cmd-q>
	binding for corresponding Quit menu item shortcut.

	* macosx/README: updated instructions for embedded build, 
	added various improvements by Russell Owen.

	* unix/tcl.m4: update from Tcl.
	* unix/configure: regen.

2003-02-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinScrlbr.c (UpdateScrollbar): use SIF_DISABLENOSCROLL to
	"disable" scrollbar when on Windows when there is nothing to